--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
             <!-- Left Side Ends -->
             <!-- Contact Form Starts -->
             <div class="col-12 col-lg-8">
-                <form class="contactform" action="https://getform.io/f/bf79c2fd-5290-45ca-9a65-8f301dcf98bb" method="post">
+                <form class="contactform" method="post">
                     <div class="contactform">
                         <div class="row">
                             <div class="col-12 col-md-4">
