--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
            method: "POST",
            body: formData,
        })
-       .then(response => $(".output_message").text("Message Sent!"))
+       .then(response => alert("Thanks for Contacting ..! I Will Contact You Soon..."))
        .catch(error => console.log(error))
        }
 
