--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
                 .catch(error => console.error('Error!', error.message))
             })
 </script>-->
-<script>
+<!--<script>
    var form = document.getElementById("form");
    form.addEventListener("submit", formSubmit);
 
@@ -259,7 +259,7 @@
        .catch(error => console.log(error))
        }
 
-</script>
+</script>-->
 
 </body>
 
