--- a/blog-2.html
+++ b/blog-2.html
@@ -241,7 +241,7 @@
                             <h3><a href="blog-post-17.html">Leveraging Social Media to your Advantage</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>With substantial internet penetration and the explosion of internet-enabled devices, social media has become a part of our daily lives more than ever. The genesis of social media...
+                            <p>With substantial internet penetration and the explosion of internet-enabled devices, social media has become a part of...
                             </p>
                         </div>
                     </div>
