--- a/blog-2.html
+++ b/blog-2.html
@@ -261,7 +261,7 @@
                             <h3><a href="blog-post-18.html">3 ways to manage the Distributed Teams effectively</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>Corporates across have experienced various transformations in the past year and will continue further...
+                            <p>Corporates across have experienced various transformations in the past year and will continue further, owing to the pandemic, in terms of the employees’...
                             </p>
                         </div>
                     </div>
