--- a/blog.html
+++ b/blog.html
@@ -275,7 +275,7 @@
                         <li class="page-item active"><a class="page-link" href="#">1</a></li>
                         <li class="page-item"><a class="page-link" href="blog-1.html">2</a></li>
                         <li class="page-item"><a class="page-link" href="blog-2.html">3</a></li>
-                        <!--<li class="page-item"><a class="page-link" href="#">4</a></li>-->
+                        <li class="page-item"><a class="page-link" href="blog-3.html">4</a></li>
                     </ul>
                 </nav>
             </div>
