--- a/blog-3.html
+++ b/blog-3.html
@@ -161,7 +161,7 @@
                             <h3><a href="blog-post-19.html">Moving from being a Project Manager to an Effective Leader</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>We have always been reading & knowing about the activities/tasks,...
+                            <p>We have always been reading & know...
                             </p>
                         </div>
                     </div>
