--- a/blog-3.html
+++ b/blog-3.html
@@ -201,7 +201,7 @@
                             <h3><a href="blog-post-21.html">The role of AI in aiding Project Management</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>With the advent of modern technologies like AI & ML, their applications are largely being...
+                            <p>With the advent of modern technologies like AI & ML, their applications are...
                             </p>
                         </div>
                     </div>
