--- a/blog-3.html
+++ b/blog-3.html
@@ -241,7 +241,7 @@
                             <h3><a href="blog-post-23.html">5 Ways to Stay Motivated and Productive at all times</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>Keeping yourself motivated has become an elusive task in recent times...
+                            <p>Keeping yourself motivated has become an elusive task in recent times we’re surrounded with. Staying...
                             </p>
                         </div>
                     </div>
