--- a/blog-post-24.html
+++ b/blog-post-24.html
@@ -157,7 +157,7 @@
                 </div>
                 <!-- Meta Ends -->
                 <!-- Article Content Starts -->
-                <h1 class="text-uppercase text-capitalize">5 Tips to Successfully Working with Partner Teams</h1>
+                <h1 class="text-uppercase text-capitalize">3 Ways to Successfully Working with Partner Teams</h1>
                 <img src="img/blog/blog-post-24.jpeg" class="img-fluid" alt="Blog image" style="margin:0 32%;" />
                 <div class="blog-excerpt open-sans-font pb-5">
                     <p><br/>The projects which are typically termed as the largest of the lot, involves multiple vendors, partners & client teams. Organizations tend to outsource the non-core elements to third-party vendors in the quest to cutting costs or getting access to specialization. Thus it brings in multiple teams & stakeholders to achieve a certain project outcome. Naturally, managing such projects becomes challenging for the Project Manager as there are several communication lines to manage. Moreover, the greater challenge lies in aligning each team’s interest with the larger interest of the project. While the team’s synchronization can be maintained by having an effective communication plan at its place, the underlying self-interests of the team can become a major blocker in taking key decisions. There could be disagreements in a few project-related aspects like delivery timelines, requirements, communication which impacts projects adversely & one can easily find teams passing the buck onto other teams. The ownership aspect is conspicuously missing in such projects with people ending up playing blame games with no clear sense of responsibility.</p>
