--- a/blog-2.html
+++ b/blog-2.html
@@ -276,6 +276,7 @@
                         <li class="page-item"><a class="page-link" href="blog-1.html">2</a></li>
                         <li class="page-item active"><a class="page-link" href="#">3</a></li>
                         <li class="page-item"><a class="page-link" href="blog-3.html">4</a></li>
+                        <li class="page-item"><a class="page-link" href="blog-4.html">5</a></li>
                     </ul>
                 </nav>
             </div>
