--- a/blog-4.html
+++ b/blog-4.html
@@ -181,7 +181,7 @@
                             <h3><a href="blog-post-26.html">Building High-Performing Agile Teams</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>Business agility has become the order of the day. In this fast-paced world, organizations are heavily tested...
+                            <p>Business agility has become the order of the day. In this fast-paced world,...
                             </p>
                         </div>
                     </div>
