--- a/blog-4.html
+++ b/blog-4.html
@@ -241,7 +241,7 @@
                             <h3><a href="blog-post-29.html">Problem-Solving Techniques in Project Management</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>Project Managers encounter a host of problems while managing the project...
+                            <p>Project Managers encounter a host of problems while managing the project, which they are expected to resolve...
                             </p>
                         </div>
                     </div>
