--- a/blog-4.html
+++ b/blog-4.html
@@ -261,7 +261,7 @@
                             <h3><a href="blog-post-30.html">Project Management Practices to Manage Complex AI Projects</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>While we have a structured PM framework...
+                            <p>While we have a structured...
                             </p>
                         </div>
                     </div>
