--- a/blog-1.html
+++ b/blog-1.html
@@ -277,6 +277,7 @@
                         <li class="page-item"><a class="page-link" href="blog-2.html">3</a></li>
                         <li class="page-item"><a class="page-link" href="blog-3.html">4</a></li>
                         <li class="page-item"><a class="page-link" href="blog-4.html">5</a></li>
+                        <li class="page-item"><a class="page-link" href="blog-5.html">6</a></li>
                     </ul>
                 </nav>
             </div>
