--- a/blog-5.html
+++ b/blog-5.html
@@ -181,7 +181,7 @@
                             <h3><a href="blog-post-32.html">Change Management Framework for Driving Digital Transformation</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>Change Management is one of the most important aspects to manage when...
+                            <p>Change Management is one of the most...
                             </p>
                         </div>
                     </div>
