--- a/blog-5.html
+++ b/blog-5.html
@@ -161,7 +161,7 @@
                             <h3><a href="blog-post-31.html">4 Most Important Things To Learn From Sports</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>The life of an athlete teaches a lot that one can learn & apply in their lives. To perform at an...
+                            <p>The life of an athlete teaches a lot that one can learn & apply in their lives. To perform at an extraordinarily high level, athletes experience & go through...
                             </p>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                             <h3><a href="blog-post-33.html">The Value And Benefits of Giving</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>We live in an age where prosperity, position & influence are given the highest importance & people's skills...
+                            <p>We live in an age where prosperity, position & influence...
                             </p>
                         </div>
                     </div>
