--- a/blog-post-35.html
+++ b/blog-post-35.html
@@ -153,7 +153,7 @@
                 <div class="meta open-sans-font">
                     <span><i class="fa fa-user"></i> Jignesh</span>
                     <span class="date"><i class="fa fa-calendar"></i> 22 August 2021</span>
-                    <span><i class="fa fa-tags"></i> Change Management, Change Mindset, Innovation, Digital Transformation, CHange is Constant</span>
+                    <span><i class="fa fa-tags"></i> Change Management, Change Mindset, Innovation, Digital Transformation, Change is Constant</span>
                 </div>
                 <!-- Meta Ends -->
                 <!-- Article Content Starts -->
