--- a/blog-5.html
+++ b/blog-5.html
@@ -241,7 +241,7 @@
                             <h3><a href="blog-post-35.html">The Need For Embracing Change</a></h3>
                         </div>
                         <div class="entry-content open-sans-font">
-                            <p>“Change is a new Constant” is a cliché we’ve heard all our lives. Embracing change is not an option now but a must for each of us...
+                            <p>“Change is a new Constant” is a cliché we’ve heard all our lives. Embracing change is not an option now but a must for each of us to grow & blossom in every area of our life...
                             </p>
                         </div>
                     </div>
