--- a/about.html
+++ b/about.html
@@ -312,7 +312,7 @@
                             <div class="icon">
                                 <i class="fa fa-briefcase"></i>
                             </div>
-                            <span class="time open-sans-font text-uppercase">2016 - Present</span>
+                            <span class="time open-sans-font text-uppercase">2016 - 2021</span>
                             <h5 class="poppins-font text-uppercase">Sr. Project Manager <span class="place open-sans-font">Infibeam Avenues Ltd.</span></h5>
                             <p class="open-sans-font">•	Re-imagined the entire digital mobile service experience by providing the solution expertise in designing the telecom system of Saudi’s largest telecom company. </p>
                             <p class="open-sans-font">•	Delivering projects in the agile environment by conducting 10-day sprints which includes sprint planning, daily scrums and retrospectives ensuring the deliverables are time-bound and measurable. </p>
@@ -376,6 +376,14 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2020 - Present</span>
                             <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
+                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
+                        </li>
+                         <li>
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap"></i>
+                            </div>
+                            <span class="time open-sans-font text-uppercase">2020 - Present</span>
+                            <h5 class="poppins-font text-uppercase">Program Management Professional (PgMP) <a target="_blank" href="/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                         <li>
