Updated HTML content

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <img src="img/img-mobile.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
                 <h6 class="text-uppercase open-sans-font mb-0 d-block d-sm-none d-lg-block">hey there !</h6>
                 <h1 class="text-uppercase poppins-font"><span>I'm</span> Jignesh Bhatt</h1>
-                <p class="open-sans-font">A Senior Delivery Techno-functional Manager who has an experience of handling more than $100M projects across Ecommerce, Airlines, Defence and Telecom Domain.</p>
+                <p class="open-sans-font">I Empower Business Success through Strategic Program Management. Delivering $100M+ programs to High Standards Helping Organizations Overcome Their Delivery Challenges, Driving Business Strategy, Growth and Innovation.</p>
                 <a href="about.html" class="btn btn-about">more about me</a>
             </div>
         </div>
