Updated HTML content

--- a/about.html
+++ b/about.html
@@ -170,12 +170,12 @@
                         <ul class="about-list list-unstyled open-sans-font">
                             <li> <span class="title">Address :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Mumbai, India</span> </li>
                             <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+919987548641</span> </li>
-                            <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">jigneshbhatt2015@gmail.com</span> </li>
+                            <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">jigneshbhatt2024@gmail.com</span> </li>
                             <li> <span class="title">languages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">English, Hindi, Gujarati, Marathi</span> </li>
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a href="/pdf/CV.pdf" class="btn btn-download">Download CV</a>
+                        <a href="/pdf/CV.pdf" class="btn btn-download">Download Profile</a>
                     </div>
                 </div>
             </div>
@@ -197,13 +197,13 @@
                     </div>
                     <div class="col-6">
                         <div class="box-stats">
-                            <h3 class="poppins-font position-relative">5</h3>
+                            <h3 class="poppins-font position-relative">10</h3>
                             <p class="open-sans-font m-0 position-relative text-uppercase">Happy<span class="d-block">customers</span></p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="box-stats">
-                            <h3 class="poppins-font position-relative">2</h3>
+                            <h3 class="poppins-font position-relative">5</h3>
                             <p class="open-sans-font m-0 position-relative text-uppercase">awards <span class="d-block">won</span></p>
                         </div>
                     </div>
@@ -225,11 +225,11 @@
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Project Management</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Program Management</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p89">
-                    <span>80%</span>
+                    <span>90%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
@@ -239,33 +239,33 @@
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p70">
-                    <span>70%</span>
+                    <span>95%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Program Management</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Project Management</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p66">
-                    <span>66%</span>
-                    <div class="slice">
-                        <div class="bar"></div>
-                        <div class="fill"></div>
-                    </div>
-                </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Programming Languages</h6>
-            </div>
-            <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p95">
                     <span>80%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Webservices API</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Business Analysis and Strategy</h6>
+            </div>
+            <div class="col-6 col-md-3 mb-3 mb-sm-5">
+                <div class="c100 p95">
+                    <span>85%</span>
+                    <div class="slice">
+                        <div class="bar"></div>
+                        <div class="fill"></div>
+                    </div>
+                </div>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Product Management</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p50">
@@ -275,7 +275,7 @@
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Communication skills</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Communication Skills</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p65">
@@ -285,7 +285,7 @@
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Leadership skills</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Leadership Skills</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p45">
@@ -295,7 +295,7 @@
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Conflict resolution</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">Stakeholder Management</h6>
             </div>
         </div>
         <!-- Skills Ends -->
@@ -308,6 +308,18 @@
             <div class="col-lg-6 m-15px-tb">
                 <div class="resume-box">
                     <ul>
+                        <li>
+                            <div class="icon">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
+                            <span class="time open-sans-font text-uppercase">2021 - Present</span>
+                            <h5 class="poppins-font text-uppercase">Sr. Project Manager <span class="place open-sans-font">GE Healthcare</span></h5>
+                            <p class="open-sans-font">• Spearheaded the strategic initiative of improving the Market share of Mammo Product by ~10% in the USCAN market by delivering customer-centric features on time, by closely collaborating with senior leadership and multiple business functions. </p>
+                            <p class="open-sans-font">• Led  large-scale transformation initiatives that redefined business processes, achieving a 25% reduction in operational inefficiencies and significantly enhancing overall productivity. </p>
+                            <p class="open-sans-font">• Fostered a culture of continuous improvement, implementing agile methodologies and scalable frameworks that improved program delivery times by 40% and maximized resource utilization. </p>
+                            <p class="open-sans-font">• Introduced data analytics dashboard to track and analyse field issue patterns, enabling targeted interventions and preventive measures, lowering support costs by 40%. </p>
+                            <p class="open-sans-font">• Mentored & coached team members and leads to develop them into new future leaders with Improved skills. </p>
+                        </li>
                         <li>
                             <div class="icon">
                                 <i class="fa fa-briefcase"></i>
@@ -351,7 +363,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2012 - 2014</span>
-                           <h5 class="poppins-font text-uppercase">Masters Degree <a target="_blank" href="https://simsr.somaiya.edu/en" class="place open-sans-font">K.J.Somaiya Institute of Management Studies</a></h5>
+                           <h5 class="poppins-font text-uppercase">Masters Degree <a target="_blank" href="https://simsr.somaiya.edu/en" class="place open-sans-font">K.J.Somaiya Institute of Management</a></h5>
                             <p class="open-sans-font">Operations Management</p>
                         </li>
                         <li>
@@ -359,8 +371,16 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2010</span>
-                            <h5 class="poppins-font text-uppercase">Bachelor Degree <a target="_blank" href="https://mu.ac.in/" class="place open-sans-font">University of Mumbai</a></h5>
+                            <h5 class="poppins-font text-uppercase">Bachelor Degree <a target="_blank" href="https://kjsce.somaiya.edu/en" class="place open-sans-font">K.J.Somaiya Institute of Engineering</a></h5>
                             <p class="open-sans-font">Electronics Engineering</p>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap"></i>
+                            </div>
+                            <span class="time open-sans-font text-uppercase">2023 - Present</span>
+                            <h5 class="poppins-font text-uppercase">Program Management Professional (PgMP) <a target="_blank" href="/pdf/PgMP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
+                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                         <li>
                             <div class="icon">
@@ -376,14 +396,6 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2020 - Present</span>
                             <h5 class="poppins-font text-uppercase">Project Management Professional (PMI-ACP) <a target="_blank" href="/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
-                            <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
-                        </li>
-                         <li>
-                            <div class="icon">
-                                <i class="fa fa-graduation-cap"></i>
-                            </div>
-                            <span class="time open-sans-font text-uppercase">2020 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Program Management Professional (PgMP) <a target="_blank" href="/pdf/PMI-ACP.pdf" class="place open-sans-font">Project Management Institute (PMI)</a></h5>
                             <!--<p class="open-sans-font">GPA: 4.89 out of 5 </p>-->
                         </li>
                         <li>
