--- a/contact.html
+++ b/contact.html
@@ -160,11 +160,11 @@
                     <span class="d-block">call</span>+919987548641
                 </p>
                 <ul class="social list-unstyled pt-1 mb-5">
-                    <li class="facebook"><a title="Facebook" target="_blank" href="https://www.facebook.com/Business-leadership-and-Personal-growth-104423538303208"><i class="fa fa-facebook"></i></a>
+                    <li class="linkedin"><a title="Linkedin" target="_blank" href="https://www.linkedin.com/in/bhattjignesh/"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li class="twitter"><a title="Twitter" target="_blank" href="https://twitter.com/jigneshbhatt28"><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li class="youtube"><a title="Youtube" target="_blank" href="https://www.youtube.com/channel/UChEBDFt2DKAJDFGoIcRyrkA"><i class="fa fa-youtube"></i></a>
+                    <li class="youtube"><a title="Youtube" target="_blank" href="https://www.youtube.com/watch?v=tA5usGFV4G0"></i></a>
                     </li>
                    <!-- <li class="dribbble"><a title="Dribbble" target="_blank" href="https://dribbble.com/shahriarshafin/"><i class="fa fa-dribbble"></i></a>
                     </li>-->
