--- a/about.html
+++ b/about.html
@@ -117,6 +117,12 @@
                 <h2>Blog</h2>
             </a>
         </li>
+        <li class="icon-box">
+            <i class="fa fa-testimonials"></i>
+            <a href="testimonials.html">
+                <h2>Testimonials</h2>
+            </a>
+        </li>
     </ul>
     <!-- Fixed Navigation Ends -->
     <!-- Mobile Menu Starts -->
