--- a/about.html
+++ b/about.html
@@ -138,6 +138,7 @@
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
                 <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                <li><a href="testimonials.html"><i class="fa fa-testimonials"></i><span>Testimonials</span></a></li>
             </ul>
         </div>
     </nav>
