--- a/testimonials.html
+++ b/testimonials.html
@@ -160,13 +160,13 @@
                 <h1 class="text-uppercase text-capitalize">Importance of Project Management in the VUCA world</h1>-->
                 <img src="img/blog/award photo.jpeg" class="img-fluid" alt="Blog image"/>
                 <div class="blog-excerpt open-sans-font pb-5">
-                    <p><br/>I had the pleasure of working with Jignesh Bhatt, an outstanding Staff Technical Project Manager. Our collaboration on various projects at GEHC demonstrated Jignesh’s exceptional leadership, strategic thinking, and delivery expertise.
-                    Jignesh excels in:
-                    • Project planning, execution, and delivery
-                    • Stakeholder management and communication
-                    • Inspiring team leadership and collaboration
-                    A valuable asset to any team
-                                ---------- Rajeev Ranjan, Director of Engineering, GE Healthcare</p>
+                    <p><br/>"I had the pleasure of working with Jignesh Bhatt, an outstanding Staff Technical Project Manager. Our collaboration on various projects at GEHC demonstrated Jignesh’s exceptional leadership, strategic thinking, and delivery expertise.
+                    <br/>Jignesh excels in:
+                    <br/>• Project planning, execution, and delivery
+                    <br/>• Stakeholder management and communication
+                    <br/>• Inspiring team leadership and collaboration
+                    <br/>A valuable asset to any team"
+                                <br/>-- Rajeev Ranjan, Director of Engineering, GE Healthcare</p>
                     <p><strong><u>Collaborative Leadership:</u></strong> Agile philosophy has coined a new term called “Servant-leadership” which bears a strong relationship with having collaborative leadership. This leadership style helps to connect with teams within and across departments to take up key decisions required in keeping teams aligned and streamlining various processes. This creates an inclusive environment with a shared sense of responsibility wherein they contribute to something larger than themselves. This is one form of participative decision making as each one of them expresses their viewpoints in the larger interest of an organization. This lets organizations embrace leveraging on peoples’ skills, perspectives and opinions which are very critical in driving change in this VUCA world.</p>
                     <p><strong><u>Fostering an agile culture:</u></strong> We talk a lot about Emotional intelligence (EQ) and its role in one’s personal growth. However, this trait has a strong bearing on driving and shaping an organization’s culture. The culture of any organization forms a backdrop of anything they intend to do. And in these uncertain times, the project manager with his EQ skills needs to inculcate the right mindset with the team so that they adapt the required flexible and robust strategy. Innovative thinking needs to be driven to explore different ways of implementing technology, defining processes and formulating policies. As a part of agile culture, a PM needs to scan through and take into account all the possible impacts an environment change might have, in order to build strategies that can offset the potential setbacks of volatility and uncertainties.</p>
                     <p><strong><u>Strategic Networking:</u></strong> There won’t be any better time for Project Managers to shift their focus from doing a mere stakeholder engagement to forging long-term collaborative partnerships. Networking has always been the term frequently used in the corporate environment, as a necessary component for achieving career growth. However, at an organization level, networking across customers, competitors & partners provides the political flexibility and allegiance required to thrive under such changing times. Even at a project level, networking across the levels of an organization provides invaluable insights required to ensure having a complete congruence with the strategic goals at all times.</p>
