--- a/testimonials.html
+++ b/testimonials.html
@@ -110,10 +110,16 @@
                 <h2>Contact</h2>
             </a>
         </li>
-        <li class="icon-box active">
+        <li class="icon-box">
             <i class="fa fa-comments"></i>
             <a href="blog.html">
                 <h2>Blog</h2>
+            </a>
+        </li>
+        <li class="icon-box active">
+            <i class="fa fa-testimonials"></i>
+            <a href="testimonials.html">
+                <h2>Testimonials</h2>
             </a>
         </li>
     </ul>
@@ -130,7 +136,8 @@
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-                <li class="active"><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                <li><a href="blog.html"><i class="fa fa-envelope-open"></i><span>Blog</span></a></li>
+                <li class="active"><a href="testimonials.html"><i class="fa fa-testimonials"></i><span>Testimonials</span></a></li>
             </ul>
         </div>
     </nav>
