Updated HTML content

--- a/about.html
+++ b/about.html
@@ -112,13 +112,13 @@
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-comments"></i>
+            <i class="fa fa-blog"></i>
             <a href="blog.html">
                 <h2>Blog</h2>
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-testimonials"></i>
+            <i class="fa fa-comments"></i>
             <a href="testimonials.html">
                 <h2>Testimonials</h2>
             </a>
