--- a/testimonials.html
+++ b/testimonials.html
@@ -111,13 +111,13 @@
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-comments"></i>
+            <i class="fa fa-blog"></i>
             <a href="blog.html">
                 <h2>Blog</h2>
             </a>
         </li>
         <li class="icon-box active">
-            <i class="fa fa-testimonials"></i>
+            <i class="fa fa-comments"></i>
             <a href="testimonials.html">
                 <h2>Testimonials</h2>
             </a>
@@ -180,7 +180,7 @@
                     <p><br/><i>"Jignesh was a very effective project manager at Infibeam. When he came on board he really jumped in and got up to speed on a complex project quite quickly. He brought an experienced PM perspective to the team that was very beneficial. In his role as Project Manager, I found Jignesh to be an effective project manager I've worked with. His attention to detail makes him a rare and valuable asset."</i>
                                 <br/><p style="text-indent: 90px;">-- <strong>Sarfaraz Girkar, Assistant Vice President, JP Morgan Chase</strong></p></p>
                     <p><br/><i>"Jignesh is a highly motivated individual. It was great having him as a participant in one of the PMP preparation workshops. He brought his rich experience to our high intensity sessions on project management and added tremendous value. He used to ask very apt questions and that helped me in steering the session in the right direction. "</i>
-                                <br/><p style="text-indent: 90px;">-- <strong>Tasneedm Dhoondia, Proprietor, Tasmur Hydraulic Equipment</strong></p></p>
+                                <br/><p style="text-indent: 90px;">-- <strong>Tasneem Dhoondia, Proprietor, Tasmur Hydraulic Equipment</strong></p></p>
                     <p><br/><i>"Jignesh is one of the few individuals that I loved working with during the two years of our Masters course in Management Studies. We collaborated on several projects where in he expertly filled in the shoes of a leader when required and would also be a great team member who made sure we had the best output as a team. He can not only take control and lead every kind of situation that might arise but would never shy away when it was required to work under someone else's guidance. He has the ability to command a room and get people on board with ideas—even team members who were initially on completely different pages. This skill which often takes years to develop, comes naturally to him. I was particularly impressed by Jignesh’s ability to meet even the stringent deadlines—effortlessly. As a team member and a leader, Jignesh was always successful and I am in no doubt that he would excel in everything that he sets his mind to."</i>
                                 <br/><p style="text-indent: 90px;">-- <strong>Tara Redkar, Process Manager, University of California</strong></p></p>
                     <p><br/><i>"Jignesh is not only a Project Manager but also "A Profound Thinker"! Works with great mannerism. Genuine asset for any organization. Peers would definitely admire having him around. A very humble and a simple guy, yet marks his own territory. "</i>
