--- a/blog.html
+++ b/blog.html
@@ -111,13 +111,13 @@
             </a>
         </li>
         <li class="icon-box active">
-            <i class="fa fa-comments"></i>
+            <i class="fa fa-blog"></i>
             <a href="blog.html">
                 <h2>Blog</h2>
             </a>
         </li>
         <li class="icon-box">
-            <i class="fa fa-testimonials"></i>
+            <i class="fa fa-comments"></i>
             <a href="testimonials.html">
                 <h2>Testimonials</h2>
             </a>
