Updated HTML content

--- a/blog.html
+++ b/blog.html
@@ -111,7 +111,7 @@
             </a>
         </li>
         <li class="icon-box active">
-            <i class="fa fa-blog"></i>
+            <i class="fa fa-rss"></i>
             <a href="blog.html">
                 <h2>Blog</h2>
             </a>
