--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
             </a>
         </li>
         <li class="icon-box">
-                <i class="fa fa-blog"></i>
+                <i class="fa fa-rss"></i>
                 <a href="blog.html">
                     <h2>Blog</h2>
                 </a>
