Updated HTML content

--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,6 @@
                 </li>
                 <!-- Portfolio Item Ends -->
                 <!-- Portfolio Item Starts -->
-                
                 <li>
                     <figure>
                         <img src="img/projects/project-8.jpg" alt="Portolio Image" />
@@ -214,6 +213,12 @@
                 </li>
                 <!-- Portfolio Item Ends -->
                 <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
+                        <img src="img/projects/project-10.jpg" alt="Portolio Image" />
+                        <div><span>Workflow Improvement in Pristina Mammography System</span></div>
+                    </figure>
+                </li>
                 <!-- Portfolio Item Ends -->
             </ul>
         </section>
@@ -516,6 +521,43 @@
                         <li>This project facilitates any student to avail his attendance record easily by using a telephone line.</li>
                         <li>This project consisted of Telephone line & a database system from where the data is being retrieved.</li>
                         <li>Implementation of Micro-controller IS89S51 & various other hardware components was carried out.</li>
+                        <!--<li>Fourth</li>-->
+                        </ul>
+                        </div>
+                       </figcaption>
+                        <!-- Main Project Content Ends -->
+                    </figure>
+                </li>
+                <!-- Portfolio Item Detail Ends -->
+                <!-- Portfolio Item Detail Starts -->
+                <li>
+                    <figure>
+                        <!-- Project Details Starts -->
+                        <figcaption>
+                            <h3>Workflow Improvement in Pristina Mammography System</h3>
+                            <div class="row open-sans-font">
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Workflow Improvement in Pristina Mammography System</span>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">All Hospitals globally</span>
+                                </div>
+                                <!--<div class="col-6 mb-2">
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Languages </span>: <span class="ft-wt-600 uppercase">C, Visual-Basic</span> -->
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">https://investor.gehealthcare.com/news-releases/news-release-details/ge-healthcare-unveils-pristina-streamline-technologist-workflow</a></span>
+                                </div>
+                            </div>
+                        </figcaption>
+                        <!-- Project Details Ends -->
+                        <!-- Main Project Content Starts -->
+                         <!-- <img src="./portfolio_files/project-1.jpg" alt="Portolio Image"> -->
+                       <figcaption>
+                        <div class="col-12 col-sm-6 mb-2">
+                        <ul class="mycustom">
+                        <li>This new Pristina Via mammography system designed to enhance the screening experience for both technologists and patients, balancing the demands of diagnostic accuracy and fast-paced workflows to facilitate more patient-centered breast care.</li>
+                        <li>Spearheaded this strategic initiative of improving the Market share of Mammo Product by ~10% in the USCAN market by delivering customer-centric features on time, by closely collaborating with senior leadership and multiple business functions.</li>
                         <!--<li>Fourth</li>-->
                         </ul>
                         </div>
