--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Jignesh Bhatt | Senior Delivery Manager</title>
+    <title> Jignesh Bhatt | Strategic Program Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jignesh Bhatt is a Delivery Manager based in Mumbai,India."/>
+    <meta name="description" content="Jignesh Bhatt is a Program Manager specialize in leading Strategic programs."/>
     
     <!-- Template Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
