Updated HTML content

--- a/portfolio.html
+++ b/portfolio.html
@@ -505,11 +505,11 @@
                                     <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">All Hospitals globally</span>
                                 </div>
                                 <!--<div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Languages </span>: <span class="ft-wt-600 uppercase">C, Visual-Basic</span> -->
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Languages </span>: <span class="ft-wt-600 uppercase">C, Visual-Basic</span> 
                                 </div>
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">https://investor.gehealthcare.com/news-releases/news-release-details/ge-healthcare-unveils-pristina-streamline-technologist-workflow</a></span>
-                                </div>
+                                </div>-->
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
