Updated HTML content

--- a/blog-3.html
+++ b/blog-3.html
@@ -278,6 +278,7 @@
                         <li class="page-item active"><a class="page-link" href="#">4</a></li>
                         <li class="page-item"><a class="page-link" href="blog-4.html">5</a></li>
                         <li class="page-item"><a class="page-link" href="blog-5.html">6</a></li>
+                        <li class="page-item"><a class="page-link" href="blog-6.html">7</a></li>
                     </ul>
                 </nav>
             </div>
