--- a/blog-1.html
+++ b/blog-1.html
@@ -116,6 +116,12 @@
                 <h2>Blog</h2>
             </a>
         </li>
+         <li class="icon-box">
+            <i class="fa fa-comments"></i>
+            <a href="testimonials.html">
+                <h2>Testimonials</h2>
+            </a>
+        </li>
     </ul>
     <!-- Fixed Navigation Ends -->
     <!-- Mobile Menu Starts -->
@@ -131,6 +137,7 @@
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
                 <li class="active"><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                <li><a href="testimonials.html"><i class="fa fa-testimonials"></i><span>Testimonials</span></a></li>
             </ul>
         </div>
     </nav>
