--- a/blog-5.html
+++ b/blog-5.html
@@ -286,6 +286,7 @@
                         <li class="page-item"><a class="page-link" href="blog-4.html">5</a></li>
                         <li class="page-item active"><a class="page-link" href="#">6</a></li>
                         <li class="page-item"><a class="page-link" href="blog-6.html">7</a></li>
+                        <li class="page-item"><a class="page-link" href="blog-7.html">8</a></li>
                     </ul>
                 </nav>
             </div>
