Updated HTML content

--- a/blog-post-43.html
+++ b/blog-post-43.html
@@ -158,7 +158,7 @@
                 <!-- Meta Ends -->
                 <!-- Article Content Starts -->
                 <h1 class="text-uppercase text-capitalize">Prioritization Framework Models for A/B Tests</h1>
-                <img src="img/blog/blog-post-43.jpeg" class="img-fluid" alt="Blog image" style="margin:0 16%;" />
+                <img src="img/blog/blog-post-43.jpg" class="img-fluid" alt="Blog image" style="margin:0 16%;" />
                 <div class="blog-excerpt open-sans-font pb-5">
                     <p><br/><strong>A/B testing</strong> becomes intensive and cumbersome when you’re overwhelmed with a lot of ideas or hypothesis to test. You tend to test one hypothesis at a time so that you’re aware of what specific change governed a lot of difference in the conversions. Hence It can’t be tested everything at once and so the priority is always to test the highest potential first. But how do you identify such idea – is the moot question. That’s when you need a right prioritization model that takes into account the right attributes and rate them more objectively, to prioritize good A/B ideas over the others.</p>
                     <p>There are a few popular prioritization frameworks in this conversion optimization space like <strong>PIE & ICE frameworks</strong>:</p>
